# ontologyanalyzer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ontologyanalyzer/: __init__.py  ontologyanalyzer.py
tests/: test_ontologyanalyzer.py
