[tool.poetry]
name = "ontologyanalyzer"
version = "0.1.0"
description = "a ontology analyzer python package for the genome annotations, web mining and also for the graph implementation on the ontologies."
authors = ["Gaurav Sablok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
